src/objects/Apttus_Config2__ConfigSelectConfigProductsSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Configuration settings for product selection pages. The record should be named as &quot;Primary Settings&quot;.</description>
    <fields>
        <fullName>Apttus_Config2__AlwaysDisplayLeafProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Always Display Leaf Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CacheAllProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Cache all products to avoid SOQL queries. Should be enabled when number of product records are small.</description>
        <inlineHelpText>Check to cache all products to avoid extra SOQL queries.</inlineHelpText>
        <label>Cache All Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CarouselCategoryLevel__c</fullName>
        <description>Maximum Depth allowed to be browsed in the Product Carousel.</description>
        <inlineHelpText>No value will allow infinite browse depth. A value of zero will restrict you to the root level.</inlineHelpText>
        <label>Carousel Category Level</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CarouselDefaultIcon__c</fullName>
        <description>Default Icon used for the categories in the Carousel.</description>
        <inlineHelpText>Id to attachment</inlineHelpText>
        <label>Carousel Default Icon</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CartListItemDescriptionField__c</fullName>
        <description>Holds the API field name of the Long Description field to be used in the Cart Detail View page</description>
        <inlineHelpText>Holds the API field name of the Long Description field to be used in the Cart Detail View page</inlineHelpText>
        <label>Cart List Item Description Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollapseAllLeafOptionGroups__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Collapse all the leaf option groups in the Config Options Detail View page</description>
        <inlineHelpText>Collapse all the leaf option groups in the Config Options Detail View page</inlineHelpText>
        <label>Collapse All Leaf Option Groups</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomActionLabelName__c</fullName>
        <description>The name of the custom label for the action.</description>
        <inlineHelpText>The name of the custom label for the action.</inlineHelpText>
        <label>Custom Action Label Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CustomActionPage__c</fullName>
        <description>The name of the custom action page.</description>
        <inlineHelpText>The name of the custom action page.</inlineHelpText>
        <label>Custom Action Page</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableAddAnother__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This custom setting removes the user&apos;s ability to add multiple instances of the same product.</description>
        <inlineHelpText>This custom setting removes the user&apos;s ability to add multiple instances of the same product.</inlineHelpText>
        <label>Disable Add Another</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableAddToCartForOptionProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether &apos;Add to Cart&apos; and &apos;Configure&apos; button should be hidden for option products on catalog page.</description>
        <inlineHelpText>A global setting to hide &apos;Add to Cart&apos; and &apos;Configure&apos; button for option products on catalog page.</inlineHelpText>
        <label>Disable Add To Cart for Option Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableAddToCartOnClick__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable &quot;Add To Cart&quot; button on click until the server confirms addition of product.</description>
        <inlineHelpText>Check to disable &quot;Add To Cart&quot; button on click until the server confirms addition of product.</inlineHelpText>
        <label>Disable Add To Cart On Click</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__DisableFavorites__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable saving the favorite, favorites category and other favorites related UI items</description>
        <inlineHelpText>Disable saving the favorite, favorites category and other favorites related UI items</inlineHelpText>
        <label>Disable Favorites</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__EnableCategoryFilter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Narrow Your Search category filtering during product search.</description>
        <inlineHelpText>Enable Narrow Your Search category filtering during product search.</inlineHelpText>
        <label>Enable Category Filter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FavoritesCategoryUploadImage__c</fullName>
        <description>Upload an image for displaying across all Favorites categories</description>
        <inlineHelpText>Upload an image for displaying across all Favorites categories</inlineHelpText>
        <label>Favorites Upload Image</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FavoritesDisplayLabel__c</fullName>
        <description>Label for the Favorites (e.g Quick Buys, Pre-defined Solutions, Saved Configurations, Templates, etc..). If empty, it would default to &quot;Favorites&quot;</description>
        <inlineHelpText>Label for the Favorites (e.g Quick Buys, Pre-defined Solutions, Saved Configurations, Templates, etc..). If empty, it would default to &quot;Favorites&quot;</inlineHelpText>
        <label>Favorites Display Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__FavoritesIconAttachmentId__c</fullName>
        <label>Favorites Icon Attachment Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideBreadcrumb__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide the breadcrumb navigation element.</description>
        <inlineHelpText>Hide the breadcrumb navigation element.</inlineHelpText>
        <label>Hide Breadcrumb</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCartHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide the Cart Header in select pages</description>
        <label>Hide Cart Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideCompareProducts__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked compare products feature will be hidden from the catalog page.</description>
        <inlineHelpText>Turn this setting on to hide compare products feature in the catalog page.</inlineHelpText>
        <label>Hide Compare Products</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideConfigureAction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the &quot;Configure&quot; action should be hidden in the page.</description>
        <inlineHelpText>Indicates whether the &quot;Configure&quot; action should be hidden in the page.</inlineHelpText>
        <label>Hide Configure Action</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideDefaultOptionsInDescription__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked default options are listed along with product descriptions.</description>
        <inlineHelpText>When checked default options are not listed below the product description.</inlineHelpText>
        <label>Hide Default Options In Description</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideHelpMeChoose__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide help me choose link that takes to guided search page.</description>
        <inlineHelpText>Check this if the Help Me Choose feature should be hidden.</inlineHelpText>
        <label>Hide Help Me Choose</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideLineItemAttributeDetails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Hide Line item &quot;Details&quot; section on the Product Attribute Detail page</description>
        <inlineHelpText>Hide Line item &quot;Details&quot; section on the Product Attribute Detail page if checked.</inlineHelpText>
        <label>Hide Line Item Attribute Details</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideListedProductsPriceColumn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether to hide the price information column in listed product page.</description>
        <inlineHelpText>Please be careful in hiding this critical price information column.</inlineHelpText>
        <label>Hide Listed Products Price Column</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideNarrowYourSearch__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked Narrow Your Search is hidden.</inlineHelpText>
        <label>Hide Narrow Your Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideOptions__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether option products should be hidden in Quick Add mode</description>
        <inlineHelpText>Indicates whether option products should be hidden in Quick Add mode</inlineHelpText>
        <label>Hide Options in Quick Add Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideProductImage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether to hide product image.</description>
        <inlineHelpText>Check this to hide product image.</inlineHelpText>
        <label>Hide Product Image</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideSelectedProductChargeTypes__c</fullName>
        <defaultValue>true</defaultValue>
        <description>specifies if all charge types should be displayed for the selected products in the tree view options page.</description>
        <inlineHelpText>specifies if all charge types should be displayed for the selected products in the tree view options page.</inlineHelpText>
        <label>Hide Selected Product Charge Types</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideSelectedProductsColumn1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The look up to product record can be hidden by checking this setting.</description>
        <inlineHelpText>Check this if you want to hide the column that  shows the product name.</inlineHelpText>
        <label>Hide Selected Products Column1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__HideSingleTopCategory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If it is checked when there is only one top category for a price list and it has child categories, the top category will be hidden.</description>
        <inlineHelpText>Check to hide top category when there is only one top category and it has one or more child categories.</inlineHelpText>
        <label>Hide Single Top Category</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedFavoriteConfigurationsColumn1__c</fullName>
        <description>API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page</description>
        <inlineHelpText>comma separated API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page.</inlineHelpText>
        <label>Listed Favorite Configurations Column1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedFavoriteConfigurationsColumn2__c</fullName>
        <description>API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page</description>
        <inlineHelpText>API name of the favorite configuration field to be displayed in the list of favorite configurations on catalog page</inlineHelpText>
        <label>Listed Favorite Configurations Column2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedProductsColumn2__c</fullName>
        <description>API name of the product field to be displayed in the listed products section.</description>
        <inlineHelpText>API name of the product field to be displayed in the listed products section. A valid value could be like ProductCode.</inlineHelpText>
        <label>Listed Products Column2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedProductsColumn3__c</fullName>
        <description>API name of the product field to be displayed in the listed products section.</description>
        <inlineHelpText>API name of the product field to be displayed in the listed products section. A valid value could be like ProductCode.</inlineHelpText>
        <label>Listed Products Column3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ListedProductsDefaultIcon__c</fullName>
        <description>Default Product Icon used for the Listed Products.</description>
        <inlineHelpText>Id to attachment</inlineHelpText>
        <label>Listed Products Default Icon</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__MainSectionRatio__c</fullName>
        <defaultValue>&quot;20:60:20&quot;</defaultValue>
        <description>The ratio of main sections separated by colon. The default value is 20:60:20.</description>
        <inlineHelpText>The ratio of main sections separated by colon. The default value is 20:60:20.</inlineHelpText>
        <label>Main Section Ratio</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderStatusFields__c</fullName>
        <description>List of line item fields to display inventory and  order status</description>
        <inlineHelpText>Enter the list of line item fields separated by comma that has information about promotion, delivery info, shipping info etc.</inlineHelpText>
        <label>Order Status Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCacheFields1__c</fullName>
        <description>List of custom fields required for product cache</description>
        <inlineHelpText>List of custom fields required for product cache</inlineHelpText>
        <label>Product Cache Fields1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCacheFields2__c</fullName>
        <description>List of custom fields required for product cache</description>
        <inlineHelpText>List of custom fields required for product cache</inlineHelpText>
        <label>Product Cache Fields2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ProductCacheFields3__c</fullName>
        <description>List of custom fields required for product cache</description>
        <inlineHelpText>List of custom fields required for product cache</inlineHelpText>
        <label>Product Cache Fields3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadOnlyLocation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the location should be displayed as read only field</description>
        <inlineHelpText>Check this to display the location as read only field</inlineHelpText>
        <label>Read Only Location</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SaveAsFavoriteDialogColumns__c</fullName>
        <description>Columns for save as favorite configuration dialog on cart page</description>
        <inlineHelpText>Enter comma separated API names of the columns of favorite configuration object for save as favorite configuration dialog on cart page</inlineHelpText>
        <label>Save as Favorite Dialog Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SearchQueryLimit__c</fullName>
        <defaultValue>1000</defaultValue>
        <description>Limit applied to product search results.</description>
        <inlineHelpText>For faster product search use smaller number. Default is 1000.</inlineHelpText>
        <label>Search Query Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductsColumn2__c</fullName>
        <description>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</description>
        <inlineHelpText>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</inlineHelpText>
        <label>Selected Products Column2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductsColumn3__c</fullName>
        <description>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</description>
        <inlineHelpText>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</inlineHelpText>
        <label>Selected Products Column3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SelectedProductsColumn4__c</fullName>
        <description>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</description>
        <inlineHelpText>API name of the line item field in the selected products section. A valid value could be like ProductId__r.ProductCode</inlineHelpText>
        <label>Selected Products Column4</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowCartIcon__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the cart as icon and hides the cart sidebar on the right hand side</description>
        <inlineHelpText>Shows the cart as icon and hides the cart sidebar on the right hand side</inlineHelpText>
        <label>Minimize Cart</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowCheckboxInRuleDialog__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows checkbox instead of Add to Cart button in Rule Dialog</description>
        <inlineHelpText>Shows checkbox instead of Add to Cart button in Rule Dialog</inlineHelpText>
        <label>Show Checkbox In Rule Dialog</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowProductIconCartDetailView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the product icon on each line item in  the Cart Detail View page (Note: this will disable the action item columns and show the actions underneath the product icon)</description>
        <inlineHelpText>Show the product icon on each line item in  the Cart Detail View page (Note: this will disable the action item columns and show the actions underneath the product icon)</inlineHelpText>
        <label>Show Product Icon Cart Detail View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowQuantity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this to show quantity input field. When a product is added to cart quantity entered in this field is used as line item quantity.</description>
        <inlineHelpText>Check this to show quantity input field for add to cart action.</inlineHelpText>
        <label>Show Quantity Input</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowRecommendedProductsCartView__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show the recommended products component in the Cart Detail View page</description>
        <inlineHelpText>Show the recommended products component in the Cart Detail View page</inlineHelpText>
        <label>Show Recommended Products Cart View</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowSelectedProductAllCharges__c</fullName>
        <defaultValue>false</defaultValue>
        <description>specifies if all charge types should be displayed for the selected products in the tree view options page.</description>
        <inlineHelpText>specifies if all charge types should be displayed for the selected products in the tree view options page.</inlineHelpText>
        <label>Show Selected Product All Charges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShowSelectedProductsInConfigOptions__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows the Selected Products widget in the Config Options Detail View page</description>
        <inlineHelpText>Shows the Selected Products widget in the Config Options Detail View page</inlineHelpText>
        <label>Show Selected Products in Config Options</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TwoColumnAttributeDisplay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Attribute Details will be gathered in a two column fashion during product configuration. This setting is now handled by option group property.</description>
        <inlineHelpText>This setting is now handled by option group property.</inlineHelpText>
        <label>Show Two Columns In Attribute (D)</label>
        <type>Checkbox</type>
    </fields>
    <label>Config Select Products Settings</label>
</CustomObject>